--- a/ace/styles/project.css
+++ b/ace/styles/project.css
@@ -11,13 +11,14 @@ blockquote {
 }
 
 body {
-     background-image: url(images/st_line.jpg); 
+     background-image: url(../images/st_line_c.jpg); 
      background-attachment: fixed; 
      background-repeat: no-repeat; 
+    background: cover;
      background-color: #ffffff;
      color: #000000; 
      font-family: Cinzel, Arial, serif; 
-     padding: 20px; 
+     padding: 10px; 
     
 }
 
@@ -104,7 +105,7 @@ main {
      padding-top: 20px; 
      padding-bottom: 1px; 
      padding-left: 20px; 
-     padding-right: 60px; 
+     padding-right: 0px; 
      width: 95%; 
 }
 
